--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   backend:
     build: ./laravel-backend
     volumes:
-      - ./backend:/var/www/html
+      - ./laravel-backend:/var/www/html
       - backend-storage:/var/www/html/storage
     environment:
       - DB_HOST=mysql
